--- a/index.html
+++ b/index.html
@@ -8,9 +8,53 @@
     <link rel="stylesheet" href="style.css">
     <title>Title</title>
 </head>
-<body >
-<div id="wrapper" class="ui container">
-    <nav id="navBar" class="ui centered grid container">
+<body class="ui container">
+<div class="ui centered grid container">
+    <nav id="topNav" >
+        <ul class="ui borderless menu">
+
+
+            <li class="ui dropdown">
+                <div class ="item">
+                    <a href="#">Men</a>
+                    <i class="dropdown icon"></i>
+                </div>
+            </li>
+
+            <li class="ui dropdown">
+                <div class ="item">
+                    <a href="#">Women</a>
+                    <i class="dropdown icon"></i>
+                </div>
+            </li>
+
+            <li class="ui dropdown">
+                <div class ="item">
+                    <a href="#">Kids</a>
+                    <i class="dropdown icon"></i>
+                </div>
+            </li>
+
+            <li class="ui dropdown">
+                <div class ="item">
+                    <a href="#">Brands</a>
+                    <i class="dropdown icon"></i>
+                </div>
+            </li>
+            <li class="ui dropdown">
+                <div class ="item">
+                    <a href="#">Search</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</div>
+<div class="ui centered grid container" >
+    <img class="ui centered image" src="https://cdn.shopify.com/s/files/1/1035/5187/files/logoshort_800x.png?v=1543956749" alt="island snow logo">
+
+</div>
+<div class="ui centered grid container">
+    <nav id="navBar" >
 <ul class="ui borderless menu">
 
 
@@ -49,5 +93,21 @@
 </ul>
     </nav>
 </div>
+<div class="ui centered grid container">
+    <img class="ui fluid image" src="https://cdn.cnn.com/cnnnext/dam/assets/171128111913-03-hawaii-nuclear-warning-trnd-restricted-super-tease.jpg" alt="bgr">
+</div>
+<!--
+Use the background color from the real site.
+Add a bit of padding to the top and bottom.
+Use a “ui three column grid container” to format the three columns.
+Each column has an horizontal rule and a “ui list” class with three “item” elements.
+Use the Semantic UI labeled input class for the email input.
+-->
+<div class="ui three column grid container">
+    
+
+</div>
+
+
 </body>
 </html>
