--- a/index.html
+++ b/index.html
@@ -103,8 +103,25 @@ Use a “ui three column grid container” to format the three columns.
 Each column has an horizontal rule and a “ui list” class with three “item” elements.
 Use the Semantic UI labeled input class for the email input.
 -->
-<div class="ui three column grid container">
-    
+<div class="ui inverted three column grid container black-background">
+   <ul class="ui column">
+       <li>test</li>
+       <li>test</li>
+       <li>test</li>
+   </ul>
+    <ul class="ui column">
+       <li>test</li>
+       <li>test</li>
+       <li>test</li>
+   </ul>
+    <ul class="ui column">
+       <li>test</li>
+       <li>test</li>
+       <li><input type="text"></li>
+   </ul>
+
+
+
 
 </div>
 
